建立CoreData数据模型

--- a/memorial_icloud/MainStoryboard.storyboard
+++ b/memorial_icloud/MainStoryboard.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller - 备忘录-->
+        <!--Main View Controller - 备忘录-->
         <scene sceneID="rUe-sH-QKI">
             <objects>
-                <tableViewController id="jdV-C4-NlP" sceneMemberID="viewController">
+                <tableViewController id="jdV-C4-NlP" customClass="MainViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="VPr-WH-ihx">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
