--- a/memorial_icloud/MainStoryboard.storyboard
+++ b/memorial_icloud/MainStoryboard.storyboard
@@ -13,7 +13,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Koz-CY-gfs">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CellOfNotes" id="Koz-CY-gfs" customClass="MainTableViewCell">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Koz-CY-gfs" id="d5X-s3-btC">
@@ -36,7 +36,9 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="wtE-Fw-Kbf" kind="push" id="q9K-zf-m3m"/>
+                                    <outlet property="date" destination="uEc-cz-kuU" id="8UM-PQ-QW0"/>
+                                    <outlet property="title" destination="eOb-bO-SJ2" id="vwA-FK-z0e"/>
+                                    <segue destination="wtE-Fw-Kbf" kind="push" identifier="openNote" id="q9K-zf-m3m"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -51,7 +53,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="wtE-Fw-Kbf" kind="push" id="f6K-yz-GjG"/>
+                                    <segue destination="wtE-Fw-Kbf" kind="push" identifier="addNote" id="f6K-yz-GjG"/>
                                 </connections>
                             </button>
                         </barButtonItem>
@@ -61,10 +63,10 @@
             </objects>
             <point key="canvasLocation" x="495" y="59"/>
         </scene>
-        <!--View Controller-->
+        <!--Text View Controller-->
         <scene sceneID="R1F-wO-KSP">
             <objects>
-                <viewController id="wtE-Fw-Kbf" sceneMemberID="viewController">
+                <viewController id="wtE-Fw-Kbf" customClass="TextViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qHk-bB-Rpn"/>
                         <viewControllerLayoutGuide type="bottom" id="yyL-Zu-gB4"/>
@@ -85,6 +87,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="Bif-e8-DXM"/>
+                    <connections>
+                        <outlet property="textView" destination="FvR-zP-uVh" id="C4A-hg-JmK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DQt-RN-TER" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
