--- a/memorial_icloud/MainStoryboard.storyboard
+++ b/memorial_icloud/MainStoryboard.storyboard
@@ -60,19 +60,28 @@
         <scene sceneID="R1F-wO-KSP">
             <objects>
                 <viewController id="wtE-Fw-Kbf" customClass="TextViewController" sceneMemberID="viewController">
-                    <textView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="z33-FI-C6a">
+                    <textView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" usesAttributedText="YES" id="z33-FI-C6a">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <gestureRecognizers/>
+                        <attributedString key="attributedText"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="IIr-41-Ig8" appends="YES" id="mas-JO-5Ev"/>
+                        </connections>
                     </textView>
                     <connections>
                         <outlet property="textView" destination="z33-FI-C6a" id="CtL-ah-h0D"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DQt-RN-TER" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="IIr-41-Ig8">
+                    <connections>
+                        <action selector="tapTextView:" destination="wtE-Fw-Kbf" id="lkA-NX-2QV"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1015" y="55"/>
         </scene>
